fixed overflow issue in support component

--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,7 @@ html {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
-  border-bottom: .4vmin solid #1A1A1A;
+  border-bottom: .3vmin solid #1A1A1A;
   align-items: center;
   width: 100%;
   font-size: 2.2vmin;
@@ -273,6 +273,8 @@ html {
   text-align: center;
   padding-left: 2vmin;
   padding-right: 2vmin;
+  height: 35vmin;
+  overflow: scroll;
 }
 
 .Supporting-text-wrapper {
